Update version to 1.5-SNAPSHOT

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,14 +27,14 @@
 # we change the version for the complete docs when forking of a release branch
 # etc.
 # The full version string as referenced in Maven (e.g. 1.2.1)
-version: "1.4-SNAPSHOT"
+version: "1.5-SNAPSHOT"
 # For stable releases, leave the bugfix version out (e.g. 1.2). For snapshot
 # release this should be the same as the regular version
-version_title: "1.4-SNAPSHOT"
-version_javadocs: "1.4"
+version_title: "1.5-SNAPSHOT"
+version_javadocs: "1.5-SNAPSHOT"
 
 # This suffix is appended to the Scala-dependent Maven artifact names
-scala_version_suffix: "_2.10"
+scala_version_suffix: "_2.11"
 
 # Some commonly linked pages (this was more important to have as a variable
 # during incubator; by now it should also be fine to hardcode these.)
